// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vi<ENTER>ihello 1`] = `
{
  "BUFFER": {
    "BUFFER_POST": [],
    "BUFFER_PRE": [],
    "LINE": {
      "CARET": null,
      "CARET_WIDTH": 0,
      "EOL": true,
      "POSTCARET": "",
      "PRECARET": "hello",
    },
  },
  "COMMAND_LINE": {
    "CARET": null,
    "CARET_WIDTH": 1,
    "EOL": true,
    "POSTCARET": "",
    "PRECARET": "",
  },
  "CONTROL_DOWN": false,
  "COORDS": {
    "x": 5,
    "y": 0,
  },
  "DOWN_MAPPING": [Function],
  "FILE_NAME": null,
  "HISTORY_INDEX": -1,
  "MODE": 1,
  "NAME": 1,
  "OLD_COMMANDS": [
    {
      "COMMAND_LINE": {
        "CARET": null,
        "CARET_WIDTH": 1,
        "EOL": true,
        "POSTCARET": "",
        "PRECARET": "vi",
      },
      "PWD": "/home/guest",
      "STDOUT": "",
      "USER": "guest",
    },
  ],
  "PWD": "/home/guest",
  "UP_MAPPING": [Function],
  "USER": "guest",
}
`;

exports[`vi<ENTER>ihello 2`] = `"{"home":{"guest":{".bashrc":"#!/usr/sh",".history":""},"root":{}}}"`;

exports[`vi<ENTER>ihello 3`] = `"{"PWD":"/home/guest","HOME":"/home/guest"}"`;

exports[`vi<ENTER>ihello<ENTER>hello worldArrowUp 1`] = `
{
  "BUFFER": {
    "BUFFER_POST": [
      "hello world",
    ],
    "BUFFER_PRE": [],
    "LINE": {
      "CARET": null,
      "CARET_WIDTH": 0,
      "EOL": true,
      "POSTCARET": "",
      "PRECARET": "hello",
    },
  },
  "COMMAND_LINE": {
    "CARET": null,
    "CARET_WIDTH": 1,
    "EOL": true,
    "POSTCARET": "",
    "PRECARET": "",
  },
  "CONTROL_DOWN": false,
  "COORDS": {
    "x": 5,
    "y": 0,
  },
  "DOWN_MAPPING": [Function],
  "FILE_NAME": null,
  "HISTORY_INDEX": -1,
  "MODE": 1,
  "NAME": 1,
  "OLD_COMMANDS": [
    {
      "COMMAND_LINE": {
        "CARET": null,
        "CARET_WIDTH": 1,
        "EOL": true,
        "POSTCARET": "",
        "PRECARET": "vi",
      },
      "PWD": "/home/guest",
      "STDOUT": "",
      "USER": "guest",
    },
  ],
  "PWD": "/home/guest",
  "UP_MAPPING": [Function],
  "USER": "guest",
}
`;

exports[`vi<ENTER>ihello<ENTER>hello worldArrowUp 2`] = `"{"home":{"guest":{".bashrc":"#!/usr/sh",".history":""},"root":{}}}"`;

exports[`vi<ENTER>ihello<ENTER>hello worldArrowUp 3`] = `"{"PWD":"/home/guest","HOME":"/home/guest"}"`;

exports[`vi<ENTER>ihello<ENTER>hello worldArrowUpArrowDown<BACK 12> 1`] = `
{
  "BUFFER": {
    "BUFFER_POST": [],
    "BUFFER_PRE": [],
    "LINE": {
      "CARET": null,
      "CARET_WIDTH": 1,
      "EOL": true,
      "POSTCARET": "",
      "PRECARET": "",
    },
  },
  "COMMAND_LINE": {
    "CARET": null,
    "CARET_WIDTH": 1,
    "EOL": true,
    "POSTCARET": "",
    "PRECARET": "",
  },
  "CONTROL_DOWN": false,
  "COORDS": {
    "x": 0,
    "y": 0,
  },
  "DOWN_MAPPING": [Function],
  "FILE_NAME": null,
  "HISTORY_INDEX": -1,
  "MODE": 1,
  "NAME": 1,
  "OLD_COMMANDS": [
    {
      "COMMAND_LINE": {
        "CARET": null,
        "CARET_WIDTH": 1,
        "EOL": true,
        "POSTCARET": "",
        "PRECARET": "vi",
      },
      "PWD": "/home/guest",
      "STDOUT": "",
      "USER": "guest",
    },
  ],
  "PWD": "/home/guest",
  "UP_MAPPING": [Function],
  "USER": "guest",
}
`;

exports[`vi<ENTER>ihello<ENTER>hello worldArrowUpArrowDown<BACK 12> 2`] = `"{"home":{"guest":{".bashrc":"#!/usr/sh",".history":""},"root":{}}}"`;

exports[`vi<ENTER>ihello<ENTER>hello worldArrowUpArrowDown<BACK 12> 3`] = `"{"PWD":"/home/guest","HOME":"/home/guest"}"`;

exports[`vi<ENTER>ihello<LEFT 6><RIGHT 6> 1`] = `
{
  "BUFFER": {
    "BUFFER_POST": [],
    "BUFFER_PRE": [],
    "LINE": {
      "CARET": null,
      "CARET_WIDTH": 0,
      "EOL": true,
      "POSTCARET": "",
      "PRECARET": "hello",
    },
  },
  "COMMAND_LINE": {
    "CARET": null,
    "CARET_WIDTH": 1,
    "EOL": true,
    "POSTCARET": "",
    "PRECARET": "",
  },
  "CONTROL_DOWN": false,
  "COORDS": {
    "x": 5,
    "y": 0,
  },
  "DOWN_MAPPING": [Function],
  "FILE_NAME": null,
  "HISTORY_INDEX": -1,
  "MODE": 1,
  "NAME": 1,
  "OLD_COMMANDS": [
    {
      "COMMAND_LINE": {
        "CARET": null,
        "CARET_WIDTH": 1,
        "EOL": true,
        "POSTCARET": "",
        "PRECARET": "vi",
      },
      "PWD": "/home/guest",
      "STDOUT": "",
      "USER": "guest",
    },
  ],
  "PWD": "/home/guest",
  "UP_MAPPING": [Function],
  "USER": "guest",
}
`;

exports[`vi<ENTER>ihello<LEFT 6><RIGHT 6> 2`] = `"{"home":{"guest":{".bashrc":"#!/usr/sh",".history":""},"root":{}}}"`;

exports[`vi<ENTER>ihello<LEFT 6><RIGHT 6> 3`] = `"{"PWD":"/home/guest","HOME":"/home/guest"}"`;

exports[`vi<ENTER>ihello\` 1`] = `
{
  "BUFFER": {
    "BUFFER_POST": [],
    "BUFFER_PRE": [],
    "LINE": {
      "CARET": "o",
      "CARET_WIDTH": 1,
      "EOL": false,
      "POSTCARET": "",
      "PRECARET": "hell",
    },
  },
  "COMMAND_LINE": {
    "CARET": null,
    "CARET_WIDTH": 1,
    "EOL": true,
    "POSTCARET": "",
    "PRECARET": "",
  },
  "CONTROL_DOWN": false,
  "COORDS": {
    "x": 4,
    "y": 0,
  },
  "DOWN_MAPPING": [Function],
  "FILE_NAME": null,
  "HISTORY_INDEX": -1,
  "MODE": 0,
  "NAME": 1,
  "OLD_COMMANDS": [
    {
      "COMMAND_LINE": {
        "CARET": null,
        "CARET_WIDTH": 1,
        "EOL": true,
        "POSTCARET": "",
        "PRECARET": "vi",
      },
      "PWD": "/home/guest",
      "STDOUT": "",
      "USER": "guest",
    },
  ],
  "PWD": "/home/guest",
  "UP_MAPPING": [Function],
  "USER": "guest",
}
`;

exports[`vi<ENTER>ihello\` 2`] = `"{"home":{"guest":{".bashrc":"#!/usr/sh",".history":""},"root":{}}}"`;

exports[`vi<ENTER>ihello\` 3`] = `"{"PWD":"/home/guest","HOME":"/home/guest"}"`;

exports[`vi<ENTER>ihello\`:cmd 1`] = `
{
  "BUFFER": {
    "BUFFER_POST": [],
    "BUFFER_PRE": [],
    "LINE": {
      "CARET": "o",
      "CARET_WIDTH": 1,
      "EOL": false,
      "POSTCARET": "",
      "PRECARET": "hell",
    },
  },
  "COMMAND_LINE": {
    "CARET": null,
    "CARET_WIDTH": 1,
    "EOL": true,
    "POSTCARET": "",
    "PRECARET": "cmd",
  },
  "CONTROL_DOWN": false,
  "COORDS": {
    "x": 4,
    "y": 0,
  },
  "DOWN_MAPPING": [Function],
  "FILE_NAME": null,
  "HISTORY_INDEX": -1,
  "MODE": 2,
  "NAME": 1,
  "OLD_COMMANDS": [
    {
      "COMMAND_LINE": {
        "CARET": null,
        "CARET_WIDTH": 1,
        "EOL": true,
        "POSTCARET": "",
        "PRECARET": "vi",
      },
      "PWD": "/home/guest",
      "STDOUT": "",
      "USER": "guest",
    },
  ],
  "PWD": "/home/guest",
  "UP_MAPPING": [Function],
  "USER": "guest",
}
`;

exports[`vi<ENTER>ihello\`:cmd 2`] = `"{"home":{"guest":{".bashrc":"#!/usr/sh",".history":""},"root":{}}}"`;

exports[`vi<ENTER>ihello\`:cmd 3`] = `"{"PWD":"/home/guest","HOME":"/home/guest"}"`;

exports[`vi<ENTER>ihello\`:cmd<LEFT 6><RIGHT 6> 1`] = `
{
  "BUFFER": {
    "BUFFER_POST": [],
    "BUFFER_PRE": [],
    "LINE": {
      "CARET": "o",
      "CARET_WIDTH": 1,
      "EOL": false,
      "POSTCARET": "",
      "PRECARET": "hell",
    },
  },
  "COMMAND_LINE": {
    "CARET": null,
    "CARET_WIDTH": 1,
    "EOL": true,
    "POSTCARET": "",
    "PRECARET": "cmd",
  },
  "CONTROL_DOWN": false,
  "COORDS": {
    "x": 4,
    "y": 0,
  },
  "DOWN_MAPPING": [Function],
  "FILE_NAME": null,
  "HISTORY_INDEX": -1,
  "MODE": 2,
  "NAME": 1,
  "OLD_COMMANDS": [
    {
      "COMMAND_LINE": {
        "CARET": null,
        "CARET_WIDTH": 1,
        "EOL": true,
        "POSTCARET": "",
        "PRECARET": "vi",
      },
      "PWD": "/home/guest",
      "STDOUT": "",
      "USER": "guest",
    },
  ],
  "PWD": "/home/guest",
  "UP_MAPPING": [Function],
  "USER": "guest",
}
`;

exports[`vi<ENTER>ihello\`:cmd<LEFT 6><RIGHT 6> 2`] = `"{"home":{"guest":{".bashrc":"#!/usr/sh",".history":""},"root":{}}}"`;

exports[`vi<ENTER>ihello\`:cmd<LEFT 6><RIGHT 6> 3`] = `"{"PWD":"/home/guest","HOME":"/home/guest"}"`;
